idc: Search %PATH% when loading libraries

Call LoadLibraryEx() with flags=0 in addition to get the
LoadLibrary() behavior (search %PATH%).

Amends change 824df695ad99d6096c2744bd476f75822cee1323.

Task-number: QTBUG-55283
Change-Id: Ib10eea9f71677c877f5316b45562ed48d1cc31cb
Reviewed-by: Fredrik Orderud <forderud@gmail.com>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>